--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-unstable",
+  "name": "angular-unstable-simi",
   "version": "1.1.4",
   "main": "./angular.js",
   "dependencies": {
